--- a/index.html
+++ b/index.html
@@ -6,31 +6,36 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="global.css">
     <title>Login - Controle de gastos</title>
 </head>
 
 <body>
     <form>
-        <div>
+        <div class="form-field">
             <div><label>Email</label></div>
-            <input type="email" name="email" id="email" placeholder="seu@email.com" onchange="validateFields()" />
+            <input type="email" name="email" id="email" placeholder="seu@email.com" onchange="onChangeEmail()" />
+            <div class="error" id="email-required-error">Email é obrigatório</div>
+            <div class="error" id="email-invalid-error">Email é inválido</div>
         </div>
-        <div>
+        <div class="form-field">
             <div><label>Senha</label></div>
-            <input type="password" name="password" id="password" placeholder="Sua senha" onchange="validateFields()"/>
+            <input type="password" name="password" id="password" placeholder="Senha" onchange="onChangePassword()" />
+            <div class="error" id="password-required-error">Senha é obrigatória</div>
         </div>
         <div>
-            <button type="button" class="clean" id="recover-password-button" disabled="true">Recuperar Senha</button>
+            <button type="button" class="clear" id="recover-password-button" disabled="true">Recuperar senha</button>
         </div>
         <div>
-            <button type="button" class="entrar" id="login-button" disabled="true">Entrar</button>
+            <button type="button" class="solid" id="login-button" disabled="true">Entrar</button>
         </div>
         <div>
-            <button type="button" class="register">Registrar</button>
+            <button type="button" class="outline">Registrar</button>
         </div>
     </form>
 
     <script src="script.js"></script>
+    <script src="validations.js"></script>
 </body>
 
 </html>
