--- a/pages/register/register.html
+++ b/pages/register/register.html
@@ -5,11 +5,34 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../../global.css">
+    <link rel="stylesheet" href="register.css">
+
     <title>Registrar - Controle de gastos</title>
 </head>
 
-<body>
-    Registrar
+<body class="centralize">
+    <form>
+        <div class="form-field">
+            <div><label>Email</label></div>
+            <input type="email" placeholder="seu@email.com" />
+        </div>
+        <div class="form-field">
+            <div><label>Senha</label>
+            </div>
+            <input type="password" placeholder="Senha" />
+        </div>
+        <div class="form-field">
+            <div><label>Confirmar senha</label></div>
+            <input type="password" placeholder="Confirmar Senha" />
+        </div>
+        <div>
+            <button type="button" class="solid">Registrar</button>
+        </div>
+        <div>
+            <button type="button" class="clear">Login</button>
+        </div>
+    </form>
 
 
 </body>
