--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
         <div class="form-field">
             <div><label>Email</label></div>
             <input type="email" name="email" id="email" placeholder="seu@email.com" onchange="onChangeEmail()" />
-            <div class="error" id="email-required-error">Email é obrigatório</div>
-            <div class="error" id="email-invalid-error">Email é inválido</div>
+            <div class="error" id="email-required-error" id="email-required-error" >Email é obrigatório</div>
+            <div class="error" id="email-invalid-error" id="email-invalid-error" >Email é inválido</div>
         </div>
         <div class="form-field">
             <div><label>Senha</label></div>
@@ -37,24 +37,11 @@
 
     <script src="script.js"></script>
     <script src="validations.js"></script>
-    <script src="loading.js"></script>
 
+    <script src="loading.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.12.1/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.12.1/firebase-auth-compat.js"></script>
-
-    <script>
-        const firebaseConfig = {
-            apiKey: "AIzaSyD0uGXTcdeVkxTzmS3A5cUELsDZAboW2ZM",
-            authDomain: "controle-de-gastos-339da.firebaseapp.com",
-            projectId: "controle-de-gastos-339da",
-            storageBucket: "controle-de-gastos-339da.appspot.com",
-            messagingSenderId: "728093315397",
-            appId: "1:728093315397:web:27df1201b0b48ad505ee2c"
-        };
-
-        firebase.initializeApp(firebaseConfig);
-
-    </script>
+    <script src="firebase-init.js"></script>
 
 </body>
 
