--- a/pages/home/home.html
+++ b/pages/home/home.html
@@ -5,13 +5,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../../global.css">
+    <link rel="stylesheet" href="home.css">
     <title>Home - Controle de gastos</title>
 </head>
 
 <body>
-    Home
+    <header>
+        <button type="button" onclick="logout()">Sair</button>
+    </header>
 
 
 </body>
+<script src="https://www.gstatic.com/firebasejs/9.12.1/firebase-app-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.12.1/firebase-auth-compat.js"></script>
+<script src="../../firebase-init.js"></script>
+<script src="home.js"></script>
+<script src="../../auth-guard.js"></script>
 
 </html>
