--- a/pages/home/home.html
+++ b/pages/home/home.html
@@ -15,10 +15,14 @@
         <button type="button" onclick="logout()">Sair</button>
     </header>
 
+    <ol id="transactions"></ol>
+    <button class="fab fixed bottom right">+</button>
+
 
 </body>
 <script src="https://www.gstatic.com/firebasejs/9.12.1/firebase-app-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/9.12.1/firebase-auth-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.12.1/firebase-firestore-compat.js"></script>
 <script src="../../firebase-init.js"></script>
 <script src="home.js"></script>
 <script src="../../auth-guard.js"></script>
