Criando Indice no firestore

--- a/pages/home/home.html
+++ b/pages/home/home.html
@@ -26,5 +26,7 @@
 <script src="../../firebase-init.js"></script>
 <script src="home.js"></script>
 <script src="../../auth-guard.js"></script>
+<script src="../../loading.js"></script>
+
 
 </html>
