Tela de transação

--- a/pages/home/home.html
+++ b/pages/home/home.html
@@ -16,7 +16,7 @@
     </header>
 
     <ol id="transactions"></ol>
-    <button class="fab fixed bottom right">+</button>
+    <button class="fab fixed bottom right" onclick="newTransaction()">+</button>
 
 
 </body>
