--- a/pages/transaction/transaction.html
+++ b/pages/transaction/transaction.html
@@ -29,7 +29,7 @@
             </div>
             <div class="form-field">
                 <div><label>Moeda *</label></div>
-                <select>
+                <select id="currency">
                     <option value="USD">Dólar</option>
                     <option value="EUR">Euro</option>
                     <option value="BRL" selected>Real</option>
@@ -59,9 +59,9 @@
             </div>
             <div class="form-field">
                 <div><label>Descrição</label></div>
-                <input type="text">
+                <input type="text" id="description">
             </div>
-            <button type="button" class="solid" disabled id="save-button">Salvar</button>
+            <button type="button" class="solid" disabled id="save-button" onclick="saveTransaction()">Salvar</button>
             <button type="button" class="clear">Cancelar</button>
 
         </form>
