--- a/pages/home/home.html
+++ b/pages/home/home.html
@@ -27,6 +27,7 @@
 <script src="home.js"></script>
 <script src="../../auth-guard.js"></script>
 <script src="../../loading.js"></script>
+<script src="../../services/transaction.service.js"></script>
 
 
 </html>
