--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
 
 <body class="centralize">
     <form>
-        <h1 class="centralize login">Login</h1>
+        <h1 class="centralize login">Login Account</h1>
         <div class="form-field">
             <div><label>E-mail</label></div>
             <input type="email" name="email" id="email" placeholder="seu@email.com" onchange="onChangeEmail()" />
-            <div class="error" id="email-required-error" id="email-required-error" >Email é obrigatório</div>
-            <div class="error" id="email-invalid-error" id="email-invalid-error" >Email é inválido</div>
+            <div class="error" id="email-required-error" id="email-required-error">Email é obrigatório</div>
+            <div class="error" id="email-invalid-error" id="email-invalid-error">Email é inválido</div>
         </div>
         <div class="form-field">
             <div><label>Senha</label></div>
